--- a/app/src/main/res/layout/list_item_bank.xml
+++ b/app/src/main/res/layout/list_item_bank.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/parent_layout"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@color/md_grey_100"
+    android:orientation="vertical"
     tools:ignore="RtlHardcoded">
 
     <TextView
@@ -18,8 +18,8 @@
         tools:text="Royal Bank of Scotland" />
 
     <View
-        android:background="@color/accent"
         android:layout_width="match_parent"
-        android:layout_height="2dp" />
+        android:layout_height="2dp"
+        android:background="@color/accent" />
 
 </LinearLayout>
