--- a/app/src/main/res/layout/fragment_atm_details.xml
+++ b/app/src/main/res/layout/fragment_atm_details.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -10,6 +9,7 @@
         android:orientation="vertical">
 
         <TextView
+            android:id="@+id/label"
             style="@style/AppTheme.TextView.Info"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -117,20 +117,6 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/margin_4dp"
             android:layout_marginTop="@dimen/margin_4dp" />
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="2dp"
-            android:background="@color/accent" />
-
-        <TextView
-            android:id="@+id/content"
-            style="@style/AppTheme.TextView.Info"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:tag="@string/tag_bank_name"
-            android:transitionName="@string/bank_transition"
-            tools:text="{HUGE JSON OBJECT\n}\n}\n\}" />
 
 
     </LinearLayout>
