--- a/app/src/main/res/layout/list_item_atm_overview.xml
+++ b/app/src/main/res/layout/list_item_atm_overview.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/parent_layout"
@@ -8,109 +7,51 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center_horizontal"
-    android:layout_marginTop="@dimen/margin_4dp"
     android:layout_marginBottom="@dimen/margin_4dp"
     android:layout_marginLeft="@dimen/margin_8dp"
     android:layout_marginRight="@dimen/margin_8dp"
+    android:layout_marginTop="@dimen/margin_4dp"
+    app:cardBackgroundColor="@color/md_grey_100"
     app:cardUseCompatPadding="true"
     app:contentPadding="@dimen/padding_8dp"
-    app:cardBackgroundColor="@color/md_grey_100"
     tools:ignore="RtlHardcoded">
 
-    <android.support.constraint.ConstraintLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:layout_editor_absoluteX="11dp"
-        tools:layout_editor_absoluteY="12dp">
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
 
         <TextView
             android:id="@+id/title"
-            android:layout_width="wrap_content"
+            style="@style/AppTheme.TextView.Info"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:transitionName="@string/bank_transition"
-            android:textColor="@color/primary_dark"
-            android:textSize="@dimen/text_large"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:text="Just For Fun" />
+            android:textSize="@dimen/text_medium_large"
+            tools:text="London" />
+
+        <TextView
+            android:id="@+id/street"
+            style="@style/AppTheme.TextView.Info"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            tools:text="London" />
+
+        <TextView
+            android:id="@+id/postcode"
+            style="@style/AppTheme.TextView.Info"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            tools:text="London" />
 
         <TextView
             android:id="@+id/summary"
-            android:layout_width="0dp"
+            style="@style/AppTheme.TextView.Info"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginTop="8dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/league_url_label"
-            tools:text="Blah blah" />
+            tools:text="London" />
 
-        <TextView
-            android:id="@+id/league_id"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginStart="8dp"
-            android:textColor="@color/accent"
-            app:layout_constraintBottom_toBottomOf="@+id/league_id_label"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintLeft_toRightOf="@+id/league_id_label"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/league_id_label"
-            app:layout_constraintVertical_bias="0.0"
-            tools:text="1212"/>
 
-        <TextView
-            android:id="@+id/league_id_label"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:text="ID"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/title"/>
-
-        <TextView
-            android:id="@+id/league_url_label"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:text="URL"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/league_id_label"/>
-
-        <TextView
-            android:id="@+id/league_url_content"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:autoLink="web"
-            app:layout_constraintBottom_toBottomOf="@+id/league_url_label"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintLeft_toRightOf="@+id/league_url_label"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/league_url_label"
-            tools:text="http://blah"/>
-    </android.support.constraint.ConstraintLayout>
+    </LinearLayout>
 
 </android.support.v7.widget.CardView>
