--- a/app/src/main/res/layout/fragment_atm_details.xml
+++ b/app/src/main/res/layout/fragment_atm_details.xml
@@ -23,12 +23,20 @@
             android:layout_marginBottom="@dimen/margin_4dp"
             android:layout_marginTop="@dimen/margin_4dp" />
 
-        <fragment
-
-            android:id="@+id/map"
-            android:name="com.google.android.gms.maps.SupportMapFragment"
+        <android.support.v7.widget.CardView
+            android:id="@+id/map_container"
+            style="@style/AppTheme.CardViewStyle"
             android:layout_width="match_parent"
-            android:layout_height="150dp" />
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/margin_4dp">
+
+            <fragment
+                android:id="@+id/map"
+                android:name="com.google.android.gms.maps.SupportMapFragment"
+                android:layout_width="match_parent"
+                android:layout_height="150dp" />
+
+        </android.support.v7.widget.CardView>
 
         <TextView
             style="@style/AppTheme.TextView.Info"
@@ -77,7 +85,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/currency"
-            android:textColor="@color/primary_dark" />
+            android:textColor="@color/accent" />
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recycler_currency"
